# Backend_arquitect_rebanadas

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docs/: inventario_componentes_actualizado.md  migracion_arquitectura.md  migracion_utilidades_actualizado.md  plan_migracion_detallado_actualizado.md  resumen_estado_proyecto.md
migrations/: env.py
migrations/versions/: 2025_05_17_0554_crear_tabla_clientes_corredores.py
scripts/db_maintenance_scripts/: setup_audit_tables.py
scripts/migrations/: account_lockout_migration.py
scripts/security/: generate_security_report.py  monitor_logins.py  test_audit_system.py
scripts/utils/: __init__.py  check_system.py  find_legacy_imports.py  monitor_deprecation_warnings.py  test_deprecation_warnings.py  update_env.py  update_imports.py
src/config/: settings.py
src/core/domain/: base_dto.py
src/domain/shared/: custom_types.py  dtos.py  dtos_tipo_documento.py  entities.py  exceptions.py  mappers.py  types.py  use_cases.py  use_cases_tipo_documento.py
src/domain/shared/validators/: __init__.py  common.py
src/features/aseguradoras/application/: dtos.py  interfaces.py  use_cases.py
src/features/aseguradoras/domain/: entities.py  exceptions.py
src/features/aseguradoras/infrastructure/: models.py  repositories.py
src/features/clientes/application/: dtos.py  interfaces.py  use_cases.py
src/features/clientes/domain/: entities.py  exceptions.py
src/features/clientes/infrastructure/: models.py  repositories.py
src/features/corredores/: __init__.py  dependencies.py
src/features/corredores/application/: dtos.py  dtos_cliente_corredor.py  mappers.py  use_cases.py  use_cases_cliente_corredor.py
src/features/corredores/domain/: entities.py  exceptions.py
src/features/corredores/infrastructure/: init_data.py  models.py  repositories.py  repositories_cliente_corredor.py
src/features/monedas/application/: dtos.py  use_cases.py
src/features/monedas/domain/: entities.py  exceptions.py
src/features/monedas/infrastructure/: init_data.py  mappers.py  models.py  repositories.py
src/features/polizas/application/: dtos.py  use_cases.py
src/features/polizas/domain/: entities.py  exceptions.py  types.py
src/features/polizas/infrastructure/: models.py  repositories.py
src/features/shared/: exceptions.py
src/features/shared/interfaces/: __init__.py  repositories.py
src/features/shared/validators/: __init__.py  common.py
src/features/sustituciones_corredores/application/: dtos.py  use_cases.py
src/features/sustituciones_corredores/domain/: entities.py  exceptions.py
src/features/sustituciones_corredores/infrastructure/: models.py  repositories.py
src/features/tipos_documento/application/: dtos.py  use_cases.py
src/features/tipos_seguros/domain/: entities.py  (+1 more)
src/infrastructure/: cache.py  database.py  mappers.py
src/infrastructure/database/: __init__.py  base.py  models.py  repositories.py
src/infrastructure/interfaces/: repositories.py
src/infrastructure/security/: dependencies.py  jwt.py  password.py
src/infrastructure/utils/: datetime.py  validation.py
tests/: README.md  conftest.py
tests/domain/shared/: test_exceptions.py
(+48 files in other folders)
