[project]
name = "api-restseguros"
version = "0.1.0"
description = "Aplicación de Seguros"
authors = [
    { name = "Ponce1969", email = "gompatri@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg[binary]",
    "python-jose[cryptography]",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "bcrypt>=4.0.1,<5.0.0",
    "pydantic>=2.0",  # si estás usando Pydantic v2
    "pydantic-settings",
    "pydantic[email]",
    "alembic",
    "python-multipart",  # para formularios OAuth2
    "python-dotenv",
    "email-validator"
]

[tool.poetry]
package-mode = false  # Esto desactiva el modo empaquetado (ideal para proyectos backend o internos)

[tool.poetry.group.dev.dependencies]
# Herramientas de desarrollo
mypy = "^1.15.0"
ruff = "^0.11.8"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.3.3"

# Tipos para type checking
types-sqlalchemy = "^2.0.0"
types-python-jose = "^3.3.0"
types-passlib = "^1.7.0"
types-psycopg2 = "^2.9.21"

# Herramientas de seguridad
bandit = "^1.7.5"
safety = "^2.3.5"

# Utilidades
types-python-dateutil = "^2.8.19"
types-pyyaml = "^6.0.12"

[tool.ruff]
line-length = 100
target-version = "py310"
# Habilitar linters
lint.select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
    "N",  # pep8-naming
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
]

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
# Configuraciones para manejar mu00f3dulos duplicados en arquitectura por slices
explicit_package_bases = true
namespace_packages = true

# Ignorar ciertos mu00f3dulos que no tienen tipos
[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "passlib.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "jose.*"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
